knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Foreign_Qualification__c/Corporate_Entity_Foreign_Qualification__c.object-meta.xml
<CustomObject>
    <label>Corporate Entity - Foreign Qualification</label>
    <nameField>
        <displayFormat>CE(A)-{000000}</displayFormat>
        <label>Foreign Qualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Entity - Foreign Qualification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>