knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Foreign_Qualification__c/fields/Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity__c</fullName>
    <label>Corporate Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Entity - Foreign Qualification</relationshipLabel>
    <relationshipName>Corporate_Entity_Foreign_Qualification</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>