knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Foreign_Qualification__c/fields/Date_of_Foreign_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Foreign_Qualification__c</fullName>
    <label>Date of Foreign Qualification</label>
    <type>Date</type>
</CustomField>