knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Foreign_Qualification__c/fields/Foreign_Qualification_Number__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Qualification_Number__c</fullName>
    <label>Foreign Qualification Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>