knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Foreign_Qualification__c/fields/Name_in_Foreign_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Name_in_Foreign_Jurisdiction__c</fullName>
    <label>Name in Foreign Jurisdiction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>