knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_Foreign_Qualification__c/recordTypes/Corporate_Entity_Foreign_Qualification.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Entity_Foreign_Qualification</fullName>
    <active>true</active>
    <label>Corporate Entity - Foreign Qualification</label>
</RecordType>